telegraf-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegraf-podx-deployment
spec:
  selector:
    matchLabels:
      app: telegraf-podx
  minReadySeconds: 5
  replicas: 2
  template:
    metadata:
      labels:
        app: telegraf-podx
    spec:
      containers:
        - image: networktelegraf/networktelegraf:1.16.2
          imagePullPolicy: IfNotPresent
          name: telegraf-podx
          ports:
          - containerPort: 9126
          resources:
            limits:
              cpu: "1"
              ephemeral-storage: 200Mi
              memory: 1Gi
            requests:
              cpu: "0.5"
              ephemeral-storage: 100Mi
              memory: 500Mi
          volumeMounts:
            - mountPath: /etc/telegraf/telegraf.conf
              name: telegraf-config
              subPath: telegraf.conf
              readOnly: true
      volumes:
        - name: telegraf-config
          configMap:
            name: telegraf-podx-config
