telegraf-svc-cip.yml
apiVersion: v1
kind: Service
metadata:
  name: telegraf-podx-svc-cip
spec:
  selector:
    app: telegraf-podx
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 9126
