telegraf-svc-np.yml
apiVersion: v1
kind: Service
metadata:
  name: telegraf-svc-np
spec:
  selector:
    app: telegraf-podx
  type: NodePort
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 9126
