telegraf-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ntw-cert
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: telegraf-basicauth
    ingress.kubernetes.io/auth-realm: "Authentication Required"

  name: telegraf-ingress
  namespace: "ns"
spec:
  tls:
  - secretName: ntw-cert
  rules:
  - host: "your_fqdn"
    http:
      paths:
      - backend:
          serviceName: telegraf-podx-svc-cip
          servicePort: 8080
        path: /podx-metrics
